--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vercel": "^41.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -32,7 +33,8 @@
       "@vercel/speed-insights"
     ],
     "onlyBuiltDependencies": [
-      "@vercel/speed-insights"
+      "@vercel/speed-insights",
+      "esbuild"
     ]
   }
 }
