Modify the whole page to start coding the portfolio website

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "resume",
+  "author": "Pravesh Shashiraj Boodhoo",
+  "description": "My personal portfolio website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
